--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
         <!-- Discover Our Product -->
         <div class="flex py-20 w-full">
             <div class="flex flex-col gap-y-12 justify-center">
+                <!-- Header -->
                 <div class="flex flex-col gap-y-3 items-center justify-center">
                     <h2 class="text-2xl md:text-3xl lg:text-4xl font-bold">Discover Our Products</h2>
                     <p class="text-xs md:text-base lg:text-xl font-normal text-center">Produk-produk terbaik kami
