--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
                         menawarkan kualitas tinggi dan pengalaman istimewa untuk semua pelanggan.</p>
                 </div>
 
+                <!-- Colomn Products -->
                 <div
                     class="flex grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center items-start gap-y-8 gap-x-4">
                     <div class="flex flex-col gap-y-4 justify-center">
