--- a/index.html
+++ b/index.html
@@ -608,6 +608,27 @@
             </div>
         </div>
 
+        <!-- Footer -->
+        <div class="flex flex-col py-10 w-full">
+            <div class="flex flex-col gap-y-8">
+                <div class="flex grid grid-cols-1 gap-8">
+                    <div class="flex flex-col gap-y-4">
+                        <img src="./assets/logo/logo-lg.png" class="h-9 w-fit" alt="">
+                        <h2 class="text-xl font-bold">PT. Teguh Seksama Prima</h2>
+                        <p class="text-xs font-normal text-gray-700">Menjelajahi dan Memperkenalkan Kekayaan Produk
+                            Indonesia ke Seluruh Dunia. "Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan."</p>
+                    </div>
+                    <div class="flex flex-col gap-y-4">
+                        <a class="text-xs font-bold underline text-gray-700">email_perusahaan@email.com</a>
+                        <p class="text-xs font-normal text-gray-700">(021)-1234567, 088123456789</p>
+                        <p class="text-xs font-normal text-gray-700">Jl. Alamat Kantor Ini Berada, No. Gedungnya, Kabupaten, Provinsi, Indonesia, Kode Pos</p>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <span>© 2023 Whitespace UI - All rights reserved</span>
+            </div>
+        </div>
+
         <script src="./assets/js/fslightbox.js"></script>
 </body>
 
