Add katalog page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <title>Beranda - PT. Tegus Seksama Prima</title>
 </head>
 
-<body class="bg-white text-gray-900">
+<body class="bg-gray-50 text-gray-900">
     <!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
     <div class="max-w-sm p-4 sm:max-w-2xl lg:max-w-5xl xl:max-w-7xl mx-auto">
         <!-- Navbar -->
@@ -99,12 +99,12 @@
                     <div class="flex-col justify-start items-center sm:items-start gap-8 flex">
                         <!-- Text Group -->
                         <div class="h-fit flex-col justify-start items-center sm:items-start gap-2 flex">
-                            <div class="text-center sm:text-left text-white text-xs font-normal leading-none">
-                                PT. Teguh Seksama Prima</div>
-                            <div class="text-center sm:text-left text-white text-3xl font-bold z-10">
-                                Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan</div>
-                            <div class="text-center sm:text-left text-white text-xs font-normal">
-                                Menjelajahi dan Memperkenalkan Kekayaan Produk Indonesia ke Seluruh Dunia</div>
+                            <h5 class="text-center sm:text-left text-white text-xs font-normal leading-none">
+                                PT. Teguh Seksama Prima</h5>
+                            <h1 class="text-center sm:text-left text-white text-3xl font-bold z-10">
+                                Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan</h1>
+                            <h5 class="text-center sm:text-left text-white text-xs font-normal">
+                                Menjelajahi dan Memperkenalkan Kekayaan Produk Indonesia ke Seluruh Dunia</h5>
                         </div>
                         <!-- Button Group -->
                         <div class="justify-center items-center gap-3 inline-flex">
@@ -132,11 +132,11 @@
                         <!-- Text Group -->
                         <div class="h-fit flex-col justify-start items-start gap-2 flex">
                             <div class="text-left text-white text-xl font-light">
-                                PT. Teguh Seksama Prima</div>
+                                <h5>PT. Teguh Seksama Prima</h5></div>
                             <div class="text-left text-white text-5xl font-bold leading-tight z-10">
-                                Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan</div>
+                                <h1>Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan</h1></div>
                             <div class="text-left text-white text-xl font-light">
-                                Menjelajahi dan Memperkenalkan Kekayaan Produk Indonesia ke Seluruh Dunia</div>
+                                <h5>Menjelajahi dan Memperkenalkan Kekayaan Produk Indonesia ke Seluruh Dunia</h5></div>
                         </div>
                         <!-- Button Group -->
                         <div class="justify-center items-start gap-3 inline-flex">
@@ -451,9 +451,9 @@
                     </div>
                 </div>
 
-                <a href="#"
+                <a href="katalog.html"
                     class="px-4 py-3 rounded-lg border-2 border-emerald-600 box-border justify-center items-center gap-2 flex w-fit">
-                    <div class="text-emerald-600 text-sm font-medium">Lihat Katalog Produk
+                    <div class="text-emerald-600 text-xs md:text-sm font-medium">Lihat Katalog Produk
                     </div>
                 </a>
             </div>
@@ -610,7 +610,7 @@
 
         <!-- Footer -->
         <div class="flex flex-col py-10 w-full">
-            <div class="flex flex-col gap-y-8">
+            <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
                         <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit" alt="">
@@ -625,9 +625,9 @@
                     </div>
                 </div>
                 <div class="divider"></div>
-                <div class="w-full grid grid-cols-1 lg:grid-cols-2 flex justify-between">
-                    <span class="text-center lg:text-left">© 2023 Whitespace UI - All rights reserved</span>
-                    <span class="text-center lg:text-right">Created by Digi Dreamers</span>
+                <div class="w-full grid grid-cols-1 lg:grid-cols-2 gap-2 flex justify-between">
+                    <span class="text-xs text-center lg:text-left">© 2023 - All rights reserved</span>
+                    <span class="text-xs text-center lg:text-right">Created by Digi Dreamers</span>
                 </div>
             </div>
         </div>
