finish katalog page

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
         <!-- Navbar -->
         <div class="flex flex-row justify-between py-4 items-center">
             <!-- Logo -->
-            <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
+            <a href="index.html"><img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset=""></a>
 
             <!-- Navigation -->
             <div class="flex items-center">
                 <!-- Desktop -->
                 <div class="hidden lg:flex">
                     <div class="flex flex-row justify-evenly gap-x-6 items-center font-medium text-base">
-                        <a class="hover:text-emerald-600 transition ease-in-out duration-[300]" href="#hero">Beranda</a>
-                        <a class="hover:text-emerald-600 transition ease-in-out duration-[300]"
+                        <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]" href="index.html">Beranda</a>
+                        <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
                             href="#product">Produk</a>
-                        <a class="hover:text-emerald-600 transition ease-in-out duration-[300]" href="#about-us">Tentang
+                        <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]" href="#about-us">Tentang
                             Kami</a>
-                        <a class="hover:text-emerald-600 transition ease-in-out duration-[300]"
+                        <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
                             href="#gallery">Galeri</a>
-                        <a class="hover:text-emerald-600 transition ease-in-out duration-[300]"
-                            href="#tet-started">Kontak</a>
+                        <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
+                            href="#get-started">Kontak</a>
                     </div>
                 </div>
                 <!-- Mobile & Tablet -->
