--- a/katalog-makanan-olahan.html
+++ b/katalog-makanan-olahan.html
@@ -104,12 +104,12 @@
                 <ul
                     class="flex flex-wrap gap-2 lg:gap-x-4 justify-center w-full text-sm font-medium text-gray-500 dark:text-gray-400">
                     <li class="w-fit">
-                        <a id="pertanian" href="#"
-                            class="text-xs lg:text-sm bg-emerald-600 text-white border-2 border-emerald-600 text-gray-800 inline-block px-4 py-3 hover:text-white hover:bg-emerald-600 rounded-full">Pertanian</a>
+                        <a id="pertanian" href="katalog.html"
+                            class="text-xs lg:text-sm border-2 border-emerald-600 text-gray-800 inline-block px-4 py-3 hover:text-white hover:bg-emerald-600 rounded-full">Pertanian</a>
                     </li>
                     <li class="w-fit">
-                        <a href="katalog-makanan-olahan.html"
-                            class="text-xs lg:text-sm border-2 border-emerald-600 text-gray-800 inline-block px-4 py-3 hover:text-white hover:bg-emerald-600 rounded-full">Makanan
+                        <a href="#"
+                            class="text-xs lg:text-sm bg-emerald-600 text-white border-2 border-emerald-600 text-gray-800 inline-block px-4 py-3 hover:text-white hover:bg-emerald-600 rounded-full">Makanan
                             Olahan</a>
                     </li>
                     <li class="w-fit">
@@ -133,14 +133,11 @@
                     <div class="flex flex-col p-3 gap-y-3 bg-white rounded-lg h-fit md:col-span-1 lg:col-span-2">
                         <p class="text-base lg:text-lg font-bold text-green-800">Kategori</p>
                         <div class="flex flex-col gap-y-2">
-                            <a href="#" class="p-2 bg-amber-200 rounded text-xs lg:text-sm font-semibold">Kopi</a>
+                            <a href="#" class="p-2 bg-amber-200 rounded text-xs lg:text-sm font-semibold">Snack tradisional</a>
                             <a href="#"
-                                class="p-2 hover:bg-amber-50 rounded text-xs lg:text-sm font-semibold">Biji-bijian</a>
+                                class="p-2 hover:bg-amber-50 rounded text-xs lg:text-sm font-semibold">Saus</a>
                             <a href="#"
-                                class="p-2 hover:bg-amber-50 rounded text-xs lg:text-sm font-semibold">Rempah-rempah</a>
-                            <a href="#"
-                                class="p-2 hover:bg-amber-50 rounded text-xs lg:text-sm font-semibold">Buah-buahan
-                                tropis</a>
+                                class="p-2 hover:bg-amber-50 rounded text-xs lg:text-sm font-semibold">Makanan ringan</a>
                         </div>
                     </div>
 
