give hover effect to gallery item

--- a/index.html
+++ b/index.html
@@ -452,9 +452,8 @@
                 </div>
 
                 <a href="katalog.html"
-                    class="px-4 py-3 rounded-lg border-2 border-emerald-600 box-border justify-center items-center gap-2 flex w-fit">
-                    <div class="text-emerald-600 text-xs md:text-sm font-medium">Lihat Katalog Produk
-                    </div>
+                    class="px-4 py-3 rounded-lg border-2 border-amber-500 hover:border-amber-500 box-border justify-center items-center gap-2 flex w-fit hover:bg-amber-500 text-amber-500 hover:text-white text-xs md:text-sm font-medium transition ease-in-out duration-[500]">
+                    Lihat Katalog Produk
                 </a>
             </div>
         </div>
@@ -532,32 +531,32 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 grid-flow-row auto-rows-max gap-4">
                     <a data-fslightbox href="./assets/images/gallery-1.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-1.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-1.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-2.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-2.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-2.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-3.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-3.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-3.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-4.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-4.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-4.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-5.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-5.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-5.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                     <a data-fslightbox href="./assets/images/gallery-6.png">
                         <div
-                            class="bg-[url('./assets/images/gallery-6.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl">
+                            class="bg-[url('./assets/images/gallery-6.png')] bg-center bg-cover h-[160px] md:h-max md:aspect-square lg:h-[340px] lg:w-full lg:aspect-[4/3] rounded-xl hover:scale-[1.015] hover:opacity-80 transition ease-in duration-[300]">
                         </div>
                     </a>
                 </div>
