--- a/detail.html
+++ b/detail.html
@@ -53,13 +53,14 @@
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
                             href="index.html">Beranda</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#product">Produk</a>
+                            href="katalog-industri.html">Produk</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#about-us">Tentang Kami</a>
+                            href="tentang.html">Tentang
+                            Kami</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#gallery">Galeri</a>
+                            href="gallery.html">Galeri</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#get-started">Kontak</a>
+                            href="kontak.html">Kontak</a>
                     </div>
                 </div>
                 <!-- Mobile & Tablet -->
@@ -74,11 +75,11 @@
                         </summary>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content gap-y-2 mt-3 z-20 p-2 shadow bg-white/95 rounded-box w-52">
-                            <li><a href="#hero">Beranda</a></li>
-                            <li><a href="#product">Produk</a></li>
-                            <li><a href="#about-us">Tentang Kami</a></li>
-                            <li><a href="#gallery">Galeri</a></li>
-                            <li><a href="#get-started">Kontak</a></li>
+                            <li><a href="index.html">Beranda</a></li>
+                            <li><a href="katalog-industri.html">Produk</a></li>
+                            <li><a href="tentang.html">Tentang Kami</a></li>
+                            <li><a href="gallery.html">Galeri</a></li>
+                            <li><a href="kontak.html">Kontak</a></li>
                         </ul>
                     </details>
                 </div>
@@ -86,7 +87,7 @@
         </div>
 
         <!-- Main Section -->
-        <div class="flex flex-col  w-full justify-center">
+        <div class="flex flex-col w-full justify-center">
             <div class="flex flex-col gap-y-4 pt-10 pb-20">
                 <!-- Breadcrumbs -->
                 <div class="w-full text-left">
