--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                 <div class="hidden lg:flex">
                     <div class="flex flex-row justify-evenly gap-x-6 items-center font-medium text-base">
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html">Beranda</a>
+                            href="#">Beranda</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="#product">Produk</a>
+                            href="katalog.html">Produk</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="#about-us">Tentang
+                            href="tentang.html">Tentang
                             Kami</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="#gallery">Galeri</a>
+                            href="gallery.html">Galeri</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="#get-started">Kontak</a>
+                            href="kontak.html">Kontak</a>
                     </div>
                 </div>
                 <!-- Mobile & Tablet -->
@@ -87,11 +87,11 @@
                         </summary>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content gap-y-2 mt-3 z-20 p-2 shadow bg-white/95 rounded-box w-52">
-                            <li><a href="#hero">Beranda</a></li>
-                            <li><a href="#product">Produk</a></li>
-                            <li><a href="#about-us">Tentang Kami</a></li>
-                            <li><a href="#gallery">Galeri</a></li>
-                            <li><a href="#get-started">Kontak</a></li>
+                            <li><a href="#">Beranda</a></li>
+                            <li><a href="katalog.html">Produk</a></li>
+                            <li><a href="tentang.html">Tentang Kami</a></li>
+                            <li><a href="gallery.html">Galeri</a></li>
+                            <li><a href="kontak.html">Kontak</a></li>
                         </ul>
                     </details>
                 </div>
@@ -124,12 +124,12 @@
                         </div>
                         <!-- Button Group -->
                         <div class="justify-center items-center gap-3 inline-flex">
-                            <a href="#"
+                            <a href="#get-started"
                                 class="px-4 py-3 bg-amber-500 border-2 border-amber-500 box-border rounded-lg justify-center items-center gap-2 flex">
                                 <div class="text-white text-[10px] sm:text-xs font-medium leading-none">Hubungi Sekarang
                                 </div>
                             </a>
-                            <a href="#"
+                            <a href="katalog.html"
                                 class="px-4 py-3 rounded-lg border-2 border-white box-border justify-center items-center gap-2 flex">
                                 <div class="text-white text-[10px] sm:text-xs font-medium leading-none">Produk Kami
                                 </div>
@@ -159,12 +159,12 @@
                         </div>
                         <!-- Button Group -->
                         <div class="justify-center items-start gap-3 inline-flex">
-                            <a href="#"
+                            <a href="#get-started"
                                 class="px-4 py-3 bg-amber-500 hover:bg-yellow-600 border-2 border-amber-500 hover:border-yellow-600 transition ease-in-out duration-[300] box-border rounded-lg justify-center items-center gap-2 flex">
                                 <div class="text-white text-sm font-medium">Hubungi Sekarang
                                 </div>
                             </a>
-                            <a href="#"
+                            <a href="katalog.html"
                                 class="px-4 py-3 rounded-lg border-2 border-white box-border justify-center items-center gap-2 flex">
                                 <div class="text-white text-sm font-medium">Produk Kami
                                 </div>
@@ -586,8 +586,8 @@
         <div id="location" class="flex py-20 w-full justify-center">
             <div class="flex flex-col gap-y-9 w-full">
                 <div class="flex flex-col gap-y-3">
-                    <h2 class="text-2xl text-center md:text-3xl lg:text-4xl font-bold">Captured Moments</h2>
-                    <p class="text-xs text-center md:text-base lg:text-base font-normal">Ikuti kami, tau lebih dalam
+                    <h2 class="text-2xl text-center md:text-3xl lg:text-4xl font-bold">Our Location</h2>
+                    <p class="text-xs text-center md:text-base lg:text-base font-normal">Temukan kami, tau lebih dalam
                         lagi tentang kami, mari berkolaborasi untuk kemajuan negeri</p>
                 </div>
                 <iframe
