--- a/katalog-tekstil.html
+++ b/katalog-tekstil.html
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Main Section -->
-        <div class="flex flex-col py-20 w-full justify-center">
+        <div class="flex flex-col py-10 md:py-20 w-full justify-center">
             <!-- Header -->
             <div class="flex flex-col gap-y-3 items-center">
                 <h2 class="text-2xl sm:text-3xl xl:text-4xl font-bold">Discover Our Product</h2>
