--- a/katalog.html
+++ b/katalog.html
@@ -51,14 +51,14 @@
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
                             href="index.html">Beranda</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#product">Produk</a>
+                            href="#">Produk</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#about-us">Tentang
+                            href="tentang.html">Tentang
                             Kami</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#gallery">Galeri</a>
+                            href="gallery.html">Galeri</a>
                         <a class="hover:text-emerald-600 hover:scale-105 transition ease-in-out duration-[300]"
-                            href="index.html#get-started">Kontak</a>
+                            href="kontak.html">Kontak</a>
                     </div>
                 </div>
                 <!-- Mobile & Tablet -->
@@ -73,11 +73,11 @@
                         </summary>
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content gap-y-2 mt-3 z-20 p-2 shadow bg-white/95 rounded-box w-52">
-                            <li><a href="#hero">Beranda</a></li>
-                            <li><a href="#product">Produk</a></li>
-                            <li><a href="#about-us">Tentang Kami</a></li>
-                            <li><a href="#gallery">Galeri</a></li>
-                            <li><a href="#get-started">Kontak</a></li>
+                            <li><a href="index.html">Beranda</a></li>
+                            <li><a href="#">Produk</a></li>
+                            <li><a href="tentang.html">Tentang Kami</a></li>
+                            <li><a href="gallery.html">Galeri</a></li>
+                            <li><a href="kontak.html">Kontak</a></li>
                         </ul>
                     </details>
                 </div>
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Main Section -->
-        <div class="flex flex-col py-20 w-full justify-center">
+        <div class="flex flex-col py-10 md:py-20 w-full justify-center">
             <!-- Header -->
             <div class="flex flex-col gap-y-3 items-center">
                 <h2 class="text-2xl sm:text-3xl xl:text-4xl font-bold">Discover Our Product</h2>
