add preloader ke semua page, add marquee logo di index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <style>
         :root {
             font-family: 'Poppins', sans-serif;
+            background-color: #F9FAFB;
+        }
+
+        @keyframes marquee {
+            0% {
+                transform: translateX(0%);
+            }
+
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+
+        .animate-marquee {
+            animation: marquee 25s linear infinite;
         }
     </style>
 
@@ -37,17 +52,9 @@
 
 <body class="bg-gray-50 text-gray-900">
     <!-- Preloader -->
-    <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center">
-        <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
-            viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
-                fill="currentColor" />
-            <path
-                d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
-                fill="currentFill" />
-        </svg>
-        <span class="sr-only">Loading...</span>
+    <div id="preloader" role="status" class="flex z-30 h-screen w-full bg-white-25 items-center justify-center animate-pulse">
+        <img class="h-[36px] sm:h-[64px]" src="./assets/logo/logo-lg.png" alt="" srcset="">
+        <span class="sr-only">Memuat Halaman</span>
     </div>
 
     <!-- TODO Wrapper: Setinggan breakpoint untuk responsive -->
@@ -597,6 +604,50 @@
             </div>
         </div>
 
+        <!-- Partners -->
+        <div class="py-20 w-full flex flex-col gap-y-[4rem]">
+            <div class="flex flex-col gap-y-4 items-center">
+                <h2 class="text-2xl text-center md:text-3xl lg:text-4xl font-bold">Collaboration</h2>
+                <p class="max-w-2xl text-xs text-center md:text-base lg:text-base font-normal">Bersama rekanan kami yang lainnya, mari kita berkolaborasi mewujudkan pertumbuhan ekonomi lintas sektor di Indonesia</p>
+            </div>
+            <div
+                class="w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
+                ">
+                <ul
+                    class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-marquee">
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.png" alt="" srcset="">
+                    </li>
+                </ul>
+
+                <!-- Butuh satu lagi yang ini biar infinity -->
+                <ul class="flex items-center justify-center md:justify-start [&_li]:mx-8 [&_img]:max-w-none animate-marquee"
+                    aria-hidden="true">
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-1.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-2.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-3.png" alt="" srcset="">
+                    </li>
+                    <li>
+                        <img class="h-[48px] grayscale hover:grayscale-0 transition ease-in-out duration-[500]" src="./assets/logo/company-4.png" alt="" srcset="">
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <!-- Get Started/Subscribe -->
         <div id="get-started" class="flex py-20 w-full justify-center">
             <div class="relative bg-emerald-600 rounded-xl w-full h-fit">
@@ -659,8 +710,12 @@
                 var content = document.getElementById('content');
 
                 // Sembunyikan preloader dan tampilkan konten halaman
-                preloader.style.display = 'none';
-                content.style.display = 'block';
+                // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
+                setTimeout(function () {
+                    // Sembunyikan preloader dan tampilkan konten halaman
+                    preloader.style.display = 'none';
+                    content.style.display = 'block';
+                }, 1000);
             });
         </script>
 
