fix height button langganan

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                         <input type="text" placeholder="Masukkan e-mailmu disini"
                             class="input input-bordered input-md w-full bg-white rounded-md" />
                         <button type="submit"
-                            class="px-4 py-3 bg-amber-500 hover:bg-yellow-600 border-2 border-amber-500 hover:border-yellow-600 transition ease-in-out duration-[300] box-border rounded-md justify-center items-center gap-2 flex w-full h-full md:w-min">
+                            class="px-4 py-3 bg-amber-500 hover:bg-yellow-600 border-2 border-amber-500 hover:border-yellow-600 transition ease-in-out duration-[300] box-border rounded-md justify-center items-center gap-2 flex w-full h-fit md:w-min">
                             <div class="text-white text-xs md:text-sm font-medium leading-none w-max">Hubungi Sekarang
                             </div>
                         </button>
