update preload, try fix logo footer

--- a/kontak.html
+++ b/kontak.html
@@ -138,10 +138,11 @@
         </div>
 
         <script src="./assets/js/fslightbox.js"></script>
-        <script>
+         <script>
             window.addEventListener('load', function () {
                 var preloader = document.getElementById('preloader');
                 var content = document.getElementById('content');
+                content.style.display = 'none';
 
                 // Sembunyikan preloader dan tampilkan konten halaman
                 // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
