--- a/gallery.html
+++ b/gallery.html
@@ -185,6 +185,7 @@
             window.addEventListener('load', function () {
                 var preloader = document.getElementById('preloader');
                 var content = document.getElementById('content');
+                content.style.display = 'none';
 
                 // Sembunyikan preloader dan tampilkan konten halaman
                 // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
