--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-min" alt="">
+                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit object-cover" alt="">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
                         <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
@@ -708,6 +708,7 @@
             window.addEventListener('load', function () {
                 var preloader = document.getElementById('preloader');
                 var content = document.getElementById('content');
+                content.style.display = 'none';
 
                 // Sembunyikan preloader dan tampilkan konten halaman
                 // Menambahkan delay 1000 milidetik (1 detik) sebelum menyembunyikan preloader
