--- a/tentang.html
+++ b/tentang.html
@@ -204,16 +204,14 @@
             <div class="flex flex-col gap-y-1 md:gap-y-8">
                 <div class="flex grid grid-cols-1 lg:grid-cols-2 gap-8">
                     <div class="flex flex-col gap-y-4">
-                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit" alt="">
+                        <img src="./assets/logo/logo-lg.png" class="h-9 md:h-14 w-fit object-cover" alt="">
                         <h2 class="text-xl md:text-2xl font-bold">PT. Teguh Seksama Prima</h2>
-                        <p class="text-xs lg:text-sm md:text-base font-normal text-gray-700">Menjelajahi dan
-                            Memperkenalkan
+                        <p class="text-xs md:text-base font-normal text-gray-700">Menjelajahi dan Memperkenalkan
                             Kekayaan Produk
                             Indonesia ke Seluruh Dunia. "Inovasi Tanpa Batas, Berkolaborasi untuk Kemajuan."</p>
                     </div>
                     <div class="flex flex-col gap-y-4">
-                        <a
-                            class="text-xs lg:text-sm md:text-base font-bold underline text-gray-700">email_perusahaan@email.com</a>
+                        <a class="text-xs md:text-base font-bold underline text-gray-700">email_perusahaan@email.com</a>
                         <p class="text-xs md:text-base font-normal text-gray-700">(021)-1234567, 088123456789</p>
                         <p class="text-xs md:text-base font-normal text-gray-700">Jl. Alamat Kantor Ini Berada, No.
                             Gedungnya, Kabupaten, Provinsi, Indonesia, Kode Pos</p>
